added overflow for screen and Readme file

--- a/main.css
+++ b/main.css
@@ -33,6 +33,7 @@
    color: rgb(61, 61, 61);
    margin-bottom: 20px;
    position: relative;
+   overflow: hidden;
 }
 .calcscreen p{
    margin: 0;
